manage-group-members/force-app/main/default/objects/Food_Calories__c/Food_Calories__c.object-meta.xml
<CustomObject>
    <label>Food Calories</label>
    <nameField>
        <displayFormat>Item - {0000}</displayFormat>
        <label>Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Food Calories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>