manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Calories_per_item__c.field-meta.xml
<CustomField>
    <fullName>Calories_per_item__c</fullName>
    <description>field to add Calories consumed</description>
    <inlineHelpText>estimated Calories consumed</inlineHelpText>
    <label>Calories per item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>