manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Calories_per_quantity__c.field-meta.xml
<CustomField>
    <fullName>Calories_per_quantity__c</fullName>
    <formula>Ingredient__r.Calories_in_KCal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calories (per quantity)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>