manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Consumption_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Date_Time__c</fullName>
    <description>field to add Date/Time when food/drink was consumed</description>
    <inlineHelpText>Date/Time when food/drink was consumed</inlineHelpText>
    <label>Consumption Date/Time</label>
    <type>DateTime</type>
</CustomField>