manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Data_updated_from_source_on__c.field-meta.xml
<CustomField>
    <fullName>Data_updated_from_source_on__c</fullName>
    <formula>Ingredient__r.Date_Updated_from_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data updated from source on</label>
    <type>Date</type>
</CustomField>