manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Ingredient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ingredient</label>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipLabel>Food Calories</relationshipLabel>
    <relationshipName>Food_Calories</relationshipName>
    <type>Lookup</type>
</CustomField>