manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Item_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Item_Subtype__c</fullName>
    <label>Item Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Item_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcoholic</fullName>
            </value>
            <value>
                <fullName>Eggetarian</fullName>
            </value>
            <value>
                <fullName>Fruits</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Non Alcoholic</fullName>
            </value>
            <value>
                <fullName>Snacks</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>