manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
                <default>true</default>
                <label>Food</label>
            </value>
            <value>
                <fullName>Drink</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>