manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>field to add Food/Drink name customer consume</description>
    <inlineHelpText>Add Food/Drink name you consume</inlineHelpText>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>