manage-group-members/force-app/main/default/objects/Food_Calories__c/fields/Total_Calories__c.field-meta.xml
<CustomField>
    <fullName>Total_Calories__c</fullName>
    <description>Total Calories</description>
    <formula>Ingredient__r.Calories_in_KCal__c   *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Calories</inlineHelpText>
    <label>Total Calories</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>