manage-group-members/force-app/main/default/objects/Food_Calories__c/recordTypes/Drink_Item.recordType-meta.xml
<RecordType>
    <fullName>Drink_Item</fullName>
    <active>true</active>
    <label>Drink Item</label>
</RecordType>