manage-group-members/force-app/main/default/objects/Food_Calories__c/recordTypes/Food_Item.recordType-meta.xml
<RecordType>
    <fullName>Food_Item</fullName>
    <active>true</active>
    <label>Food Item</label>
</RecordType>