manage-group-members/force-app/main/default/objects/Food_Calories__c/listViews/My_Items.listView-meta.xml
<ListView>
    <fullName>My_Items</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Consumption_Date_Time__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Calories__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Items</label>
</ListView>